# micro-office

./: .gitignore  CMakeLists.txt  README.md
editor/: .gitignore  CMakeLists.txt  Readme.md  deploy_linux.sh
editor/highlighter/: CMakeLists.txt  languagedata.h  mainwindow.cpp  qsourcehighliter.cpp  qsourcehighliter.h  qsourcehighliterthemes.h  qsourcerepository.h
editor/highlighter/language/: TEMPLATE.cpp  cmake_lang.cpp  cpp_lang.cpp  cs_lang.cpp  css_lang.cpp  go_lang.cpp  java_lang.cpp  js_lang.cpp  json_lang.cpp  lua_lang.cpp  make_lang.cpp  markdown_lang.cpp  php_lang.cpp  py_lang.cpp  qml_lang.cpp  rust_lang.cpp  sh_lang.cpp  sql_lang.cpp  ts_lang.cpp  v_lang.cpp  vex_lang.cpp  vhdl_lang.cpp  x86_lang.cpp  yaml_lang.cpp
editor/linux/: install.sh  uninstall.sh
editor/share/: cpp-editor.desktop
editor/src/: CMakeLists.txt  actions.cpp  actions.hpp  cpp_message_widget.cpp  cpp_message_widget.hpp  editor.cpp  editor.cxx  editor.hpp  finder.cpp  finder.cxx  finder.hpp  global.hpp  icon.cpp  icon.cxx  icon.hpp  icons.qrc  main.cpp  main_toolbar.cpp  main_toolbar.cxx  main_toolbar.hpp  rsc.qrc  tabpane.cpp  tabpane.cxx  tabpane.hpp  window.cpp  window.cxx  window.hpp
editor/src/global/: file_actions.cpp  file_actions.hpp  recent.cpp  recent.hpp  slots.cpp  slots.hpp
editor/src/menubar/: editmenu.cpp  editmenu.cxx  editmenu.hpp  filemenu.cpp  filemenu.cxx  filemenu.hpp  helpmenu.cpp  helpmenu.cxx  helpmenu.hpp  insertmenu.cpp  insertmenu.hpp  recent_widgets.cpp  recent_widgets.cxx  recent_widgets.hpp  viewmenu.cpp  viewmenu.cxx  viewmenu.hpp
editor/src/menus/: dock_widget_menu.cpp  dock_widget_menu.cxx  dock_widget_menu.hpp  editor_context.cpp  editor_context.cxx  editor_context.hpp
editor/src/project/: project_pane.cpp  project_pane.cxx  project_pane.hpp  project_tree.cpp  project_tree.hpp
editor/src/rsc/: license.txt  lorem_ipsum.txt  message_widget.css
editor/src/settings/: editor_page.cpp  editor_page.hpp  settings_dialog.cpp  settings_dialog.cxx  settings_dialog.hpp
editor/src/windows/: date_selector.cpp  date_selector.cxx  date_selector.hpp  subwindow.cpp  subwindow.hpp
file-explorer/: CMakeLists.txt
file-explorer/src/: CMakeLists.txt  actions.cpp  actions.hpp  addressbar_buttons.cpp  addressbar_buttons.hpp  addressbar_text.cpp  addressbar_text.hpp  browserwidget.cpp  browserwidget.cxx  browserwidget.hpp  clipboard.hpp  endtoolbar.cpp  endtoolbar.hpp  main.cpp  main.cxx  navbar.cpp  navbar.hpp  searchbar.cpp  searchbar.hpp  sidebar.cpp  sidebar.hpp  tabwidget.cpp  tabwidget.hpp  trash.cpp  trash.hpp  trashbar.cpp  trashbar.hpp  window.cpp  window.cxx  window.hpp
file-explorer/src/dialogs/: appchooserdialog.cpp  appchooserdialog.hpp  helpdialog.cpp  helpdialog.hpp  keyboardshortcutsdialog.cpp  keyboardshortcutsdialog.hpp
file-explorer/src/menu/: background_contextmenu.cpp  background_contextmenu.hpp  file_contextmenu.cpp  file_contextmenu.hpp  folder_contextmenu.cpp  folder_contextmenu.hpp  multi_contextmenu.cpp  multi_contextmenu.hpp
file-explorer/src/menubar/: editmenu.cpp  editmenu.hpp  filemenu.cpp  filemenu.hpp  helpmenu.cpp  helpmenu.hpp  viewmenu.cpp  viewmenu.cxx  viewmenu.hpp
media-player/: .gitignore  CMakeLists.txt  README.md  deploy_linux.sh
media-player/linux/: install.sh  uninstall.sh
media-player/share/: cpp-media-player.desktop
media-player/src/: CMakeLists.txt  actions.cpp  actions.cxx  actions.hh  actions.hpp  appicon.rc  control.cpp  control.cxx  control.hh  control.hpp  global.hh  global.hpp  icons.qrc  main.cpp  main.cxx  seekbar.cpp  seekbar.cxx  seekbar.hh  seekbar.hpp  tray.cpp  tray.cxx  tray.hh  tray.hpp  videopane.cpp  videopane.cxx  videopane.hh  videopane.hpp  videopane_menu.cpp  videopane_menu.cxx  videopane_menu.hh  videopane_menu.hpp  window.cpp  window.cxx  window.hh  window.hpp
media-player/src/menubar/: editmenu.cpp  editmenu.cxx  editmenu.hh  editmenu.hpp  filemenu.cpp  filemenu.cxx  filemenu.hpp  helpmenu.cpp  helpmenu.cxx  helpmenu.hh  helpmenu.hpp  recent.cpp  recent.cxx  recent.hpp  recent_action.cpp  recent_action.cxx  recent_action.hpp  viewmenu.cpp  viewmenu.cxx  viewmenu.hpp
media-player/src/playlist/: listwidget.cpp  listwidget.cxx  listwidget.hpp  playlist.cpp  playlist.cxx  playlist.hh  playlist.hpp  settings.hh  settings.hpp  settingswidget.cpp  settingswidget.cxx  settingswidget.hh  settingswidget.hpp
media-player/src/rsc/: settings.xml
media-player/src/settings/: settings_dialog.cpp  settings_dialog.cxx  settings_dialog.hh  settings_dialog.hpp  settings_dialog.ui
spreadsheets/: CMakeLists.txt  COPYING.txt  README.md
spreadsheets/libmath/: CMakeLists.txt  chain.cpp  column.cpp  math.hpp
spreadsheets/src/: CMakeLists.txt  main.cpp  maintoolbar.cpp  maintoolbar.hpp  sheetwidget.cpp  sheetwidget.hpp  statusbar.cpp  statusbar.hpp  tablewidget.cpp  tablewidget.hpp  tablewidget_delegate.cpp  tablewidget_delegate.hpp  tabwidget.cpp  tabwidget.hpp  window.cpp  window.hpp
spreadsheets/src/actions/: data_actions.cpp  data_actions.hpp  file_actions.cpp  file_actions.hpp  format_actions.cpp  format_actions.hpp
spreadsheets/src/dialogs/: border_dialog.cpp  border_dialog.hpp
spreadsheets/src/formula/: formula_utils.cpp  formula_utils.hpp  math.cpp  math.hpp  math_funcs.cpp  math_funcs.hpp  math_types.hpp  str_funcs.cpp  str_funcs.hpp
spreadsheets/src/menu/: page_menu.cpp  page_menu.hpp
spreadsheets/src/menubar/: cellmenu.cpp  cellmenu.hpp  filemenu.cpp  filemenu.hpp  format_menu.cpp  format_menu.hpp  helpmenu.cpp
spreadsheets/src/parser/: csv_parser.cpp  csv_parser.hpp  parser.cpp  parser.hpp  sheet_item.hpp  xlsx_parser.cpp  xlsx_parser.hpp  xml_parser.cpp  xml_parser.hpp
spreadsheets/xlnt/source/cell/: cell.cpp
spreadsheets/xlnt/source/detail/number_format/: number_formatter.cpp
spreadsheets/xlnt/tests/workbook/: serialization_test_suite.hpp
